--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="clickButton">START</string>
     <string name="amount">Times clicked: 0</string>
     <string name="gameB">Tap the button 125 times before time runs out!</string>
+    <string name="player_name">Enter your name</string>
 </resources>
