--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="amount">Times clicked: 0</string>
     <string name="gameB">Tap the button 125 times before time runs out!</string>
     <string name="player_name">Enter your name</string>
+    <string name="waiting">Waiting for minigame to start...</string>
 </resources>
