Restart button in minigame B

--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="gameB">Tap the button 125 times before time runs out!</string>
     <string name="player_name">Enter your name</string>
     <string name="waiting">Waiting for minigame to start...</string>
+    <string name="restartButton">Restart</string>
 </resources>
