--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="answerA">Fill in your solution</string>
     <string name="verifyMessage">The answer you entered is incorrect!</string>
     <string name="verifyButton">Verify</string>
+    <string name="gameC">Forward the colorcode to the Oculus player!</string>
+    <string name="startC">Start</string>
 </resources>
