--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_activity_d__gyroscope">D_Gyroscope</string>
     <string name="gyroheader" color="@color/white">Don\'t let the ball fall off!</string>
     <string name="action_settings">Settings</string>
+    <string name="squashtext">Squash the bugs!</string>
 </resources>
