--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="gyroheader" color="@color/white">Don\'t let the ball fall off!</string>
     <string name="action_settings">Settings</string>
     <string name="squashtext">Squash the bugs!</string>
+
+    <string name="title_activity_registered">RegisteredActivity</string>
+    <string name="registered">You\'ve sucessfully registered!\n\nWaiting for game to start...</string>
 </resources>
