--- a/EscapeApp/app/src/main/res/values/strings.xml
+++ b/EscapeApp/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="gyroheader" color="@color/white">Don\'t let the ball fall off!</string>
     <string name="action_settings">Settings</string>
     <string name="squashtext">Squash the bugs!</string>
+    <string name="remote_host">Enter the remote address</string>
 </resources>
